# LoginServer

./: .drone.yml  .gitignore  .gitmodules  Cargo.toml  Dockerfile
src/: appdata.rs  main.rs
src/endpoints/auth/: login.rs  logout.rs  mod.rs  register.rs  session.rs
