[package]
name = "twinsight_content_dashboard"
version = "0.1.0"
authors = ["Tobias de Bruijn <github@thedutchmc.nl>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
reqwest = { version = "0.11.1", features = ["json", "blocking"]}
mysql = "20.1.0"