[package]
name = "login_server"
version = "0.1.0"
authors = ["Tobias de Bruijn <github@thedutchmc.nl>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
reqwest = { version = "0.11.1", features = ["json", "blocking"]}
mysql = "20.1.0"
base64 = "0.13.0"
sha2 = "0.9.3"
rand = "0.8.3"
bcrypt = "0.9.0"
chrono = "0.4.19"
regex = "1.4.5"
lazy_static = "1.4.0"
actix-cors = "0.5.4"